[project]
name = "nest_py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standart]>=0.119.0",
    "nestpy-protocols==0.1.0.post10",
    "pydantic[email]>=2.12.0",
    "uvicorn>=0.37.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://test.pypi.org/simple"
